dynamodb fixed issue where i missed set and save attributes

--- a/.ask/config
+++ b/.ask/config
@@ -2,7 +2,7 @@
   "deploy_settings": {
     "default": {
       "skill_id": "amzn1.ask.skill.9ba9d58f-6cfe-4dd0-8918-e31f7c2d20bf",
-      "was_cloned": true,
+      "was_cloned": false,
       "resources": {
         "manifest": {
           "eTag": "65826a6d8af7cc80d642008c65a57643"
@@ -16,11 +16,11 @@
           {
             "arn": "arn:aws:lambda:us-east-1:683523002438:function:Swear_Jar_Lambda",
             "awsRegion": "us-east-1",
-            "functionName": "Swear_Jar_Lambda",
+            "functionName": "arn:aws:lambda:us-east-1:683523002438:function:Swear_Jar_Lambda",
             "alexaUsage": [
               "custom/default"
             ],
-            "revisionId": "4399cc30-b77b-4b3c-9eab-c7726facc958"
+            "revisionId": "147c2964-21d3-4ceb-9ddd-73bf8ab473da"
           }
         ]
       },
